--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^1.6.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "tailwind-merge": "^1.8.0",
     "tailwindcss": "^3.0.24"
   }
 }
