Add packeg nivo/bullet
"@nivo/bullet": "^0.80.0",
"@nivo/core": "^0.80.4",
"prop-types": "^15.8.1",
https://nivo.rocks/bullet/

--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^2.1.2",
     "@fseehawer/react-circular-slider": "^2.5.16",
+    "@nivo/bullet": "^0.80.0",
+    "@nivo/core": "^0.80.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.6.7",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^1.8.0",
