--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "astro": "^1.6.7",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^1.8.0",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@types/react-calendar": "^3.9.0"
   }
 }
